compiling_error.txt
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp:6:34: error: declaration of ‘pieces’ as multidimensional array must have bounds for all dimensions except the first
 void printBoard(char **pieces, int n);
                                  ^
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp:6:34: error: variable or field ‘printBoard’ declared void
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp:6:24: error: ‘pieces’ was not declared in this scope
 void printBoard(char **pieces, int n);
                        ^
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp:6:32: error: expected primary-expression before ‘]’ token
 void printBoard(char **pieces, int n);
                                ^
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp:6:34: error: expected primary-expression before ‘]’ token
 void printBoard(char **pieces, int n);
                                  ^
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp:6:37: error: expected primary-expression before ‘int’
 void printBoard(char **pieces, int n);
                                     ^
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp: In function ‘int main()’:
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp:24:36: error: ‘printBoard’ was not declared in this scope
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp: At global scope:
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp:32:34: error: declaration of ‘pieces’ as multidimensional array must have bounds for all dimensions except the first
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp:32:34: error: variable or field ‘printBoard’ declared void
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp:32:24: error: ‘pieces’ was not declared in this scope
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp:32:32: error: expected primary-expression before ‘]’ token
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp:32:34: error: expected primary-expression before ‘]’ token
/home/ram/Projects/GraphTheory/ChessBoardOutput.cpp:32:37: error: expected primary-expression before ‘int’
